Feat: Adding a limit pitch toggle

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 <div class="map-container">
     <div id="map-a"></div>
     <div id="map-b" draggable="true"></div>
+    <label id="limit-pitch-label">
+        Limit pitch
+        <input type="checkbox" id="limit-pitch"/>
+    </label>
 </div>
 <script type="module" src="/src/main.ts"></script>
 </body>
